force-app/main/default/objects/WorkOrder/fields/ChatterPostMessage__c.field-meta.xml
<CustomField>
    <fullName>ChatterPostMessage__c</fullName>
    <description>Created By Mayank Pant. This field will store the chatter post message for the Job Record owner user.</description>
    <formula>HYPERLINK(&quot;https://genesismotoreurope--dev.lightning.force.com/lightning/r/WorkOrder/&quot;+Id+&quot;/view&quot;,WorkOrderNumber) + &quot; is now completed. Please review &quot;+ HYPERLINK(&quot;https://genesismotoreurope--dev.lightning.force.com/lightning/r/Repair__c/&quot;+Repair__c+&quot;/view&quot;,Repair__r.Name)+&quot; if all tasks are done. When everything has been successfully completed inform &quot; + HYPERLINK(&quot;https://genesismotoreurope--dev.lightning.force.com/lightning/r/Account/&quot;+ AccountId +&quot;/view&quot;,Account.Name)+&quot; about his invoice and prepare delivery or pick-up.&quot;</formula>
    <label>ChatterPostMessage</label>
    <type>Text</type>
</CustomField>