force-app/main/default/objects/WorkOrder/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <defaultValue>$User.Country</defaultValue>
    <description>Created By: Mayank Pant
Created Date: 2nd Nov 2020
Purpose: Country of the Work Order</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>