force-app/main/default/objects/WorkOrder/fields/fm_ProductId__c.field-meta.xml
<CustomField>
    <fullName>fm_ProductId__c</fullName>
    <formula>Repair__r.Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Id</label>
    <type>Text</type>
</CustomField>