force-app/main/default/objects/WorkOrder/fields/fm_ServiceAdviserUserId__c.field-meta.xml
<CustomField>
    <fullName>fm_ServiceAdviserUserId__c</fullName>
    <formula>Repair__r.ServiceAdviser__r.User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Adviser UserId</label>
    <type>Text</type>
</CustomField>