force-app/main/default/objects/WorkOrder/fields/JobOrderAssignment__c.field-meta.xml
<CustomField>
    <fullName>JobOrderAssignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Order Assignment</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Job Orders</relationshipLabel>
    <relationshipName>Job_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>