force-app/main/default/objects/WorkOrder/fields/Repair__c.field-meta.xml
<CustomField>
    <fullName>Repair__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repair</label>
    <referenceTo>Repair__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>