force-app/main/default/objects/WorkOrder/fields/ru_NumofCompletedLaborItem__c.field-meta.xml
<CustomField>
    <fullName>ru_NumofCompletedLaborItem__c</fullName>
    <label>Num of Completed Labor Item</label>
    <summaryFilterItems>
        <field>WorkOrderLineItem.LineItemType__c</field>
        <operation>equals</operation>
        <value>Labor</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Status</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>