force-app/main/default/objects/WorkOrder/fields/ru_NumofItem__c.field-meta.xml
<CustomField>
    <fullName>ru_NumofItem__c</fullName>
    <label>Num of Work Order Item</label>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>