force-app/main/default/objects/WorkOrder/fields/ru_NumofLaborItem__c.field-meta.xml
<CustomField>
    <fullName>ru_NumofLaborItem__c</fullName>
    <label>Num of Labor Item</label>
    <summaryFilterItems>
        <field>WorkOrderLineItem.LineItemType__c</field>
        <operation>equals</operation>
        <value>Labor</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>