force-app/main/default/objects/WorkOrder/fields/ru_NumofUncompletedLaborItem__c.field-meta.xml
<CustomField>
    <fullName>ru_NumofUncompletedLaborItem__c</fullName>
    <formula>ru_NumofLaborItem__c  -  ru_NumofCompletedLaborItem__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Num of Uncompleted Labor Item</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>