force-app/main/default/objects/WorkOrder/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Confirmed by Hamid. GD-2198
Keep synchrony with Status on ServiceAppointment</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>On the way to customer (pick-up)</fullName>
            </value>
            <value>
                <fullName>Picked-up at Customer</fullName>
            </value>
            <value>
                <fullName>Picked-up at Department</fullName>
            </value>
            <value>
                <fullName>On the way to Customer (delivery)</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Drop-down at Customer</fullName>
                <isActive>false</isActive>
                <label>Drop-down at Customer</label>
            </value>
            <value>
                <fullName>Drop-down at Department</fullName>
                <isActive>false</isActive>
                <label>Drop-down at Department</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>