force-app/main/default/objects/WorkOrder/fields/Time_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Time_Remaining__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 27th Nov 2020
User Story: https://jira.hyundai-autoever.eu/browse/GD-1448
Purpose: This field will show the time remaining to do the Job.</description>
    <formula>Time_Required__c -  Time_Taken__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Remaining (Hrs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>