force-app/main/default/objects/WorkOrder/fields/Time_Required__c.field-meta.xml
<CustomField>
    <fullName>Time_Required__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 27th Nov 2020
Purpose: This field will store the time required to do the job.</description>
    <label>Time Required (Hrs)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>