force-app/main/default/objects/WorkOrder/fields/Time_Taken__c.field-meta.xml
<CustomField>
    <fullName>Time_Taken__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 27th Nov 2020
Purpose: This field will show the aggregate of time invested in doing the job.</description>
    <label>Time Taken</label>
    <summarizedField>JobOrderClocking__c.Time_Taken__c</summarizedField>
    <summaryForeignKey>JobOrderClocking__c.JobOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>